# bbbbAnalysis

./: .gitignore  .gitmodules  2024Jun21_vars_mY90_mX488.txt  AidanTest.py  GetMX650files.sh  LimitTables.tex  Makefile  README.md  Resub_2023Dec6.sh  TEMProotlogon.C  VariableDicts.py  copynTupleFiles.sh  copynTupleFiles2017.sh  datacard_2018_sig_NMSSM_bbbb_MX_600_MY_400_reordered.txt  fitCurves.h  higgsCombine.Test.GoodnessOfFit.mH120.1524.root  limitStudies_2022Apr4.py  makeplots_2021Dec.py  outCheck.txt  plotUnrolledVars_2022July.py  plotUnrolledVars_2022May.py  plotVars_2022Feb.py  plotVars_2022Feb_mx300.py  plotVars_dataMinusTTbar_2022Feb.py  readFromFile.sh  renameFullSubmissions.sh  reorderUnrolledVars_2022Mar.py  temp.txt  unrollCRandVR_byYear.sh
2023Dec20/: Makefile
AidanStyle/: AidanLabels.C  AidanLabels.h  AidanStyle.C  AidanStyle.h  AidanUtils.C  AidanUtils.h
AidansNotes/: AnalysisWorkflow.md  CRlimits_2021Dec14.txt  Changes_2021Nov16.md  TreeOptimization_2021Nov18.md
MoreSignals/: NMSSM_XYH_bbbb_MX_1000_MY_150_NANOAOD_v7_PUweights_2017.txt  dataset_1000_150.txt  dataset_1000_150_frombbbbAnalysisDir.txt
Notes/: BDT.md  BKGNormUnc.md  EdmEventSize.txt  GetHiggPairEfficiencies.md  GridDataSearch.md  MissingFiles.sh  Reminders.md  Unroll-FullPlane.md  Unroll.md  bkgComposition.md  (+10 more)
createhists/: .gitignore  CMakeLists.txt  HistFileClass.cpp  HistFileClass.h  Makefile  README.md  YamlFileClass.cpp  YamlFileClass.h  config.yaml  config2.yaml  makeHists.cpp  makeHists.h
createhists/vim-sessions/: createHists.vim
tempyaml/: CMakeLists.txt  main.cpp
(+1300 files in other folders)
